force-app/main/default/objects/Aging_Bucket__mdt/Aging_Bucket__mdt.object-meta.xml
<CustomObject>
    <description>Finance Center aging buckets. Drives the dashboard bucketing of open invoices by days past Due_Date__c. NOTE: Finance_Daily_Snapshot__c stores per-bucket amounts in 6 fixed fields mapped by Sort_Order__c; changing bucket boundaries restarts the trend series, and buckets beyond the 6th fold into the last field.</description>
    <label>Aging Bucket</label>
    <pluralLabel>Aging Buckets</pluralLabel>
</CustomObject>