force-app/main/default/objects/Aging_Bucket__mdt/fields/Max_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_Overdue__c</fullName>
    <description>Upper bound (inclusive) of days past due. Blank = open-ended (the last bucket).</description>
    <label>Max Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>