force-app/main/default/objects/Aging_Bucket__mdt/fields/Min_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Min_Days_Overdue__c</fullName>
    <description>Lower bound (inclusive) of days past due for this bucket. 0 = the Current bucket.</description>
    <label>Min Days Overdue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>