force-app/main/default/objects/Aging_Bucket__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Display order (1 = Current). Also maps the bucket to its Finance_Daily_Snapshot__c aging field.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>